--- a/about.html
+++ b/about.html
@@ -91,8 +91,9 @@
     </div>
 
     <footer class="text-center text-gray-600 mt-10 p-4 border-t">
-        &copy; 2025 BusRoute & TicketCheck. All rights reserved.
+        &copy; 2025 Muhammad Junaid Attiqur. All rights reserved.
     </footer>
 
 </body>
 </html>
+
