Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
 
   <!-- Footer -->
   <footer class="text-center text-white mt-10 p-4 border-t bg-blue-600">
-    &copy; 2025 BusRoute & TicketCheck. All rights reserved.
+    &copy; 2025 Muhammad Junaid Attique. All rights reserved.
   </footer>
 
 </body>
 </html>
+
