--- a/routes.html
+++ b/routes.html
@@ -110,8 +110,9 @@
 
   <!-- Footer -->
   <footer class="text-center text-gray-600 dark:text-gray-400 mt-10 p-4 border-t border-gray-300 dark:border-gray-600">
-    &copy; 2025 BusRoute & TicketCheck. All rights reserved.
+    &copy; 2025 Muhammad Junaid Attique. All rights reserved.
   </footer>
 
 </body>
 </html>
+
