--- a/ticketsavailibilty.html
+++ b/ticketsavailibilty.html
@@ -253,8 +253,9 @@
     </div>
 
     <footer class="text-center text-gray-600 mt-10 p-4 border-t">
-        &copy; 2025 BusRoute & TicketCheck. All rights reserved.
+        &copy; 2025 Muhammad Junaid Attique. All rights reserved.
     </footer>
 
 </body>
 </html>
+
